[package]
name = "sketchover"
authors = ["Per Odlund <per.odlund@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Draw on the foreground of the wayland compositor, using wlr-layer-shell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
xkbcommon = { version = "0.5", features = ["wayland"] }
env_logger = "0.10.0"
log = "0.4.19"
raqote = "0.8.2"
smithay-client-toolkit = "0.17.0"
wayland-client = "0.30.2"
bytemuck = "1.13.0"
hex_color = "2.0.0"
cursor-icon = "1.0.0"
