[package]
name = "sketchover"
authors = ["Per Odlund <per.odlund@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "Draw on the foreground of the wayland compositor, using wlr-layer-shell"

[dependencies.confy]
version = "0.5.1"
features = ["ron_conf"]
default-features = false

[dependencies]
anyhow = "1.0.79"
bytemuck = "1.14.0"
calloop = { version = "0.12.3", features = ["signals"] }
clap = { version = "4.4.8", features = ["derive"] }
cursor-icon = "1.1.0"
directories = "5.0.1"
env_logger = "0.10.1"
font-kit = { version = "0.11.0", features = ["freetype", "loader-freetype"] }
hex_color = "2.0.0"
lazy_static = "1.4.0"
libloading = "0.8.1"
log = "0.4.20"
mlua = { version = "0.9.2", features = ["lua51", "macros"] }
pathfinder_geometry = "0.5.1"
raqote = "0.8.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
smithay-client-toolkit = "0.18.0"
tokio = { version = "1.34.0", features = ["full"] }
wayland-client = "0.31.1"
xdg = "2.5.2"
xkbcommon = { version = "0.7.0", features = ["wayland"] }
